# graph-git-rs

./: .gitignore  .mergify.yml  ANALYSIS_QUERY_CAPABILITIES.md  ARCHITECTURE_HITZELEITER.md  ARCHITECTURE_REFACTORING.md  BAZEL_ACTION_MODEL.md  BAZEL_BITBAKE_ANALYSIS.md  BAZEL_CACHE_SETUP.md  BITZEL_CODE_REVIEW.md  BITZEL_FINAL_TEST_REPORT.md  BITZEL_POC_STATUS.md  BITZEL_TEST_REPORT.md  BOOTSTRAP_ARCHITECTURE.md  BUSYBOX_TASK_EXECUTION.md  Cargo.toml  DESIGN_QUERY_SYSTEM.md  EXECUTION_AND_CACHING.md  EXECUTION_FAILURES_ANALYSIS.md  EXECUTION_SANDBOXING_GUIDE.md  EXISTING_CRATES_ANALYSIS.md  EXTERNAL_EXECUTOR_ARCHITECTURE.md  FERRARI_BUILD.md  FINAL_SESSION_METRICS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  HARDLINK_SYSROOT_DESIGN.md  IMPLEMENTATION_PLAN.md  INTENSIVE_TESTING_COMPLETE.md  KAS_SPECIFICATION.md  OVERLAY_VS_HARDLINK_SYSROOT.md  PARALLELISM_STRATEGY.md  PHASE_1_ARCHITECTURE.md  QUERY_DESIGN.md  README_HITZELEITER.md  RUST_SHELL_EXECUTOR_PROPOSAL.md  Readme.md  SANDBOXING.md  SANDBOX_DESIGN.md  SANDBOX_IMPLEMENTATION_STATUS.md  SANDBOX_POC_RESULTS.md  (+14 more)
.cargo/: config.toml
accuracy-measurement/: Cargo.toml
accuracy-measurement/src/: main.rs
accuracy-results/: accuracy-report.json
bitzel/: Cargo.toml
bitzel/examples/: simple_sandbox.rs
bitzel/src/: builder.rs  cache.rs  executor.rs  lib.rs  main.rs  pipeline.rs  sandbox.rs  signature_cache.rs  task.rs
bitzel/src/commands/: build.rs  build_ferrari.rs  clean.rs  kas.rs  mod.rs  query.rs
convenient-bitbake/: Cargo.toml  README.md  test.bb
convenient-bitbake/benches/: execution_mode_benchmark.rs
convenient-bitbake/examples/: analyze_missing_deps.rs  bitzel_poc.rs  cache_management.rs  debug_pv.rs  debug_python.rs  end_to_end_extraction.rs  extract_tasks.rs  interactive_execution.rs  kas_validation.rs  real_recipe_execution.rs  real_recipe_validation.rs  recipe_graph_demo.rs  test_all_phases.rs  test_build_env.rs  test_busybox_qemux86_64.rs  test_cache_durability.rs  test_dropbear_packageconfig.rs  test_edge_cases.rs  test_fast_path_optimization.rs  test_full_context.rs  test_garbage_collection.rs  test_includes.rs  test_meta_fmu.rs  test_native_sandbox.rs  test_network_isolation.rs  test_operators.rs  test_override_validation.rs  test_packageconfig.rs  test_poky.rs  test_python_analysis.rs  test_python_executor.rs  test_real_bitbake_workflow.rs  test_real_fetch.rs  test_real_poky_busybox.rs  test_resolver.rs  test_rustpython_concept.rs  test_template_system.rs  test_validation.rs  test_variable_expansion.rs
convenient-bitbake/src/: benchmarks.rs  bitbake_config.rs  build_env.rs  build_metrics.rs  build_orchestrator.rs  class_dependencies.rs  compression.rs  fetcher.rs  flamegraph.rs  include_resolver.rs  incremental.rs  layer_context.rs  lexer.rs  lib.rs  lib_old.rs  lru_cache.rs  override_resolver.rs  package_management.rs  parser.rs  pipeline.rs  poky_integration.rs  python_analysis.rs  python_bridge.rs  python_executor.rs  python_ir.rs  python_ir_executor.rs  python_ir_parser.rs  recipe_extractor.rs  recipe_graph.rs  reports.rs  resolver.rs  resource_monitor.rs  scheduler.rs  sdk_generation.rs  security.rs  signature_cache.rs  simple_python_eval.rs  syntax_kind.rs  sysroot.rs  task_extractor.rs  (+2 more)
convenient-bitbake/src/executor/: async_executor.rs  bbhelpers.rs  cache.rs  cache_manager.rs  direct_executor.rs  execution_log.rs  executor.rs  executor_pool.rs  external.rs  fetch_handler.rs  interactive.rs  local_executor.rs  mod.rs  monitor.rs  native_sandbox.rs  prelude.sh  remote_cache.rs  retry.rs  rust_shell_executor.rs  sandbox.rs  sandbox_backend.rs  script_analyzer.rs  script_preprocessor.rs  types.rs  wasm_executor.rs
convenient-bitbake/src/query/: expr.rs  mod.rs  output.rs  parser.rs  recipe_query.rs  task_query.rs
convenient-bitbake/tests/: parallel_execution_test.rs  rust_shell_integration_test.rs  test_python_blocks_integration.rs  test_rdepends_expansion.rs  test_rustpython_integration.rs  test_sandboxed_execution.rs
convenient-cache/: Cargo.toml  build.rs
convenient-cache/proto/: remote_execution.proto
convenient-cache/src/: grpc_client.rs  lib.rs
convenient-git/: Cargo.toml
convenient-git/src/: async_git.rs  lib.rs
convenient-graph/: Cargo.toml
convenient-graph/examples/: busybox-qemux86-64.yml
convenient-graph/src/: lib.rs
convenient-graph/tests/: cache_integrity_test.rs
convenient-kas/: Cargo.toml  fmu-project.yml
convenient-kas/src/: config_generator.rs  include_graph.rs  lib.rs  repository_manager.rs
convenient-kas/tests/: config_generator_tests.rs  integration_tests.rs  kas_parsing_tests.rs  repository_manager_tests.rs
convenient-repo/: Cargo.toml  example.xml
convenient-repo/src/: lib.rs
docs/: BITBAKE_IMPLEMENTATION_ROADMAP.md  BITBAKE_PARSER_COMPLETE.md  BITBAKE_PARSER_IMPROVEMENT_PROPOSAL.md  BITBAKE_SPECIFICATION.md  BITBAKE_VARIABLE_RESOLUTION.md  BITZEL_NATIVE_BITBAKE_SUPPORT.md  COMPREHENSIVE_TEST_REPORT.md  IMPLEMENTATION_STATUS.md  LICENSE_ANALYSIS.md  MISSING_FEATURES_AND_PYTHON_CHALLENGE.md  MODERN_BITBAKE_STRUCTURE.md  PHASE_10_ACCURACY_ANALYSIS.md  PHASE_10_COMPLETION_SUMMARY.md  PHASE_8_COMPLETION_SUMMARY.md  PHASE_9D_9E_9F_COMPLETION_SUMMARY.md  PHASE_9_COMPLETION_SUMMARY.md  PYTHON_ANALYSIS_STRATEGY.md  PYTHON_EXECUTION_ROADMAP.md  ROADMAP_EXECUTIVE_SUMMARY.md  ROWAN_BITBAKE_ARCHITECTURE.md  RUSTPYTHON_ANALYSIS.md  RUSTPYTHON_FETCH_ARCHITECTURE.md  RUSTPYTHON_INTEGRATION_STATUS.md  RUSTPYTHON_STATUS_UPDATE.md  SESSION_SUMMARY.md  VALIDATION_REPORT.md  bitbake-accuracy-roadmap-85-to-95.md  dependency-extraction-roadmap.md  path-to-92-percent.md  performance-analysis.md  phase-7-completion-summary.md  phase11-rustpython-integration.md  phases-1-6-summary.md  real-world-testing-analysis.md
graph-git/: Cargo.toml
graph-git-cli/: Cargo.toml
graph-git-cli/src/: main.rs
graph-git/src/: lib.rs
hitzeleiter/: Cargo.toml
hitzeleiter/examples/: debug_namespace.rs  extract_busybox_tasks.rs
hitzeleiter/src/: lib.rs  main.rs  sandbox.rs
hitzeleiter/src/commands/: build.rs  clean.rs  kas.rs  mod.rs  query.rs  tquery.rs
src/: main.rs
(+27 files in other folders)
