[workspace]
resolver = "2"

members = [
    "graph-git",
    "convenient-bitbake",
    "convenient-git",
    "convenient-kas",
    "convenient-repo",
    "graph-git-cli",
]

[profile.release]
lto = true
#debug = true
strip = "debuginfo"

[workspace.dependencies]
clap = { version = "4.4.11", features = ["cargo", "derive", "env"] }
neo4rs = { git = "https://github.com/neo4j-labs/neo4rs.git", version = "0.7.0" }
tracing = { version = "0.1.40", features = ["attributes"] }
serde = { version = "1.0.193", features = ["derive"] }
git2 = "0.18.1"
tracing-subscriber = "0.3.18"


