[workspace]
resolver = "2"

members = [
    "graph-git",
    "convenient-bitbake",
    "convenient-git",
    "convenient-kas",
    "convenient-repo",
    "graph-git-cli",
    "accuracy-measurement", "convenient-graph",
]

[profile.release]
lto = true
#debug = true
strip = "debuginfo"

[workspace.dependencies]
neo4rs = { git = "https://github.com/neo4j-labs/neo4rs.git", version = "0.9.0-rc.8" }
tracing = { version = "0.1.41", features = ["attributes"] }
serde = { version = "1.0.217", features = ["derive"] }
git2 = "0.20.0"
tokio = { version = "1.42", features = ["full"] }

