[package]
name = "accuracy-measurement"
version = "0.1.0"
edition = "2024"

[dependencies]
convenient-bitbake = { path = "../convenient-bitbake" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
regex = "1"
clap = { version = "4.5.38", features = ["derive"] }
colored = "2"
indicatif = "0.17"

[[bin]]
name = "measure-accuracy"
path = "src/main.rs"
