[package]
name = "bitzel"
version = "0.1.0"
edition = "2024"
authors = ["Bitzel Contributors"]
description = "Bazel-inspired build system for BitBake/Yocto projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avrabe/graph-git-rs"
keywords = ["bitbake", "yocto", "build", "bazel", "kas"]
categories = ["development-tools::build-utils"]

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5"
num_cpus = "1.16"  # For detecting CPU count in CLI configuration
clap = { version = "4.5", features = ["derive"] }

# Sandboxing with Linux namespaces
nix = { version = "0.29", features = ["mount", "sched", "process", "user", "fs"] }

# Bitzel components
convenient-graph = { path = "../convenient-graph" }
convenient-cache = { path = "../convenient-cache" }
convenient-kas = { path = "../convenient-kas" }
convenient-bitbake = { path = "../convenient-bitbake" }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "bitzel"
path = "src/main.rs"
