[package]
name = "convenient-bitbake"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
walkdir = "2.5.0"
regex = "1.10.0"
url = "2.5.0"
thiserror = "1.0.50"
glob = "0.3.1"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }

# Rowan for resilient CST parsing (rust-analyzer approach)
rowan = "0.15.15"
logos = "0.14.0"

# RustPython for executing Python code (optional feature)
rustpython = { version = "0.3", optional = true }
rustpython-vm = { version = "0.3", optional = true }

# Force older home crate version to avoid edition2024 requirement in CI
home = "=0.5.9"

[features]
default = []
python-execution = ["rustpython", "rustpython-vm"]

[dev-dependencies]
tracing-test = "0.2.5"
tracing-subscriber = "0.3"
tempfile = "3.8.0"
walkdir = "2"
