[package]
name = "convenient-bitbake"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
walkdir = "2.5.0"
regex = "1.10.0"
url = "2.5.0"
thiserror = "1.0.50"
glob = "0.3.1"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "sync", "time", "fs"] }
num_cpus = "1.16"
futures = "0.3"
chrono = "0.4"
rayon = "1.10"
hostname = "0.4"
filetime = "0.2"
clap = { version = "4.5.38", features = ["derive"] }
tracing-subscriber = "0.3.19"
async-trait = "0.1"
zstd = "0.13"
lz4 = "1.28"

# Fetcher dependencies
ureq = { version = "2.10", features = ["json"] }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"

# Linux namespaces for native sandboxing (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["mount", "sched", "process", "fs", "user", "signal"] }

# Bitzel dependencies
convenient-graph = { path = "../convenient-graph" }
convenient-cache = { path = "../convenient-cache" }
convenient-kas = { path = "../convenient-kas" }

# Rowan for resilient CST parsing (rust-analyzer approach)
rowan = "0.15.15"
logos = "0.14.0"

# RustPython for executing Python code (ENABLED BY DEFAULT for real BitBake execution)
rustpython = { version = "0.3" }
rustpython-vm = { version = "0.3" }

# brush-shell for executing shell scripts in-process (Rust-based bash interpreter)
brush-core = "0.4.0"
brush-parser = "0.3.0"

[features]
default = ["async-executor"]
async-executor = []
# Note: RustPython is now always enabled (no longer a feature flag)

[dev-dependencies]
tracing-test = "0.2.5"
tracing-subscriber = "0.3.19"
tempfile = "3.8.0"
walkdir = "2"
tokio = { version = "1.48", features = ["rt", "macros"] }
rand = "0.8"
