[package]
name = "convenient-git"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
thiserror = "1.0"
