[package]
name = "convenient-graph"
version = "0.1.0"
edition = "2024"
authors = ["Bitzel Contributors"]
description = "Generic directed acyclic graph (DAG) library for dependency resolution and caching"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avrabe/graph-git-rs"
keywords = ["graph", "dag", "dependencies", "topological-sort", "cache"]
categories = ["data-structures", "algorithms"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = "0.10"

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unused_results = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
