[package]
name = "convenient-kas"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_yaml = "0.9.34+deprecated"
tracing = { workspace = true }
git2 = { workspace = true }
sha2 = "0.10"
thiserror = "1.0"
hostname = "0.4"
tokio = { workspace = true }
convenient-git = { path = "../convenient-git" }

[dev-dependencies]
tempfile = "3.8"
