[package]
name = "convenient-repo"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
serde = { workspace = true }
tracing = { workspace = true }
url = "2.5.0"
xmlem = "0.2.3"

[dev-dependencies]
tracing-test = "0.2.4"
