[package]
name = "graph-git-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["cargo", "derive", "env"] }
neo4rs = { workspace = true }
tempfile = "3.8.0"
tokio = { version = "1.33.0", features = ["rt", "tokio-macros"] }
tracing = { workspace = true }
tracing-subscriber = "0.3.17"
graph-git = { path = "../graph-git" }
convenient-git = { path = "../convenient-git" }
convenient-kas = { path = "../convenient-kas" }
convenient-bitbake = { path = "../convenient-bitbake" }
convenient-repo = { path = "../convenient-repo" }

[dev-dependencies]
neo4j_testcontainers = "0.2.0"
testcontainers = "0.14.0"
tracing-test = "0.2.4"
url = "2.4.1"
git2 = { workspace = true }