[package]
name = "graph-git"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
neo4rs = { git = "https://github.com/neo4j-labs/neo4rs.git", version = "0.7.0-alpha.1" }
tracing = { version = "0.1.39", features = ["attributes"] }
