[package]
name = "graph-git"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { workspace = true }
neo4rs = { workspace = true }
tracing = { workspace = true }
