[package]
name = "hitzeleiter"
version = "0.1.0"
edition = "2024"
authors = ["Hitzeleiter Contributors"]
description = "Hitzeleiter - Hot conductor build orchestration layer for BitBake/Yocto (Bazel-inspired)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avrabe/graph-git-rs"
keywords = ["bitbake", "yocto", "build", "orchestration", "kas"]
categories = ["development-tools::build-utils"]

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5"
num_cpus = "1.16"  # For detecting CPU count in CLI configuration
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

# Sandboxing with Linux namespaces
nix = { version = "0.29", features = ["mount", "sched", "process", "user", "fs"] }

# Bitzel components
convenient-graph = { path = "../convenient-graph" }
convenient-cache = { path = "../convenient-cache" }
convenient-kas = { path = "../convenient-kas" }
convenient-bitbake = { path = "../convenient-bitbake" }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "hitzeleiter"
path = "src/main.rs"
